Add restaurant details.

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,10 @@
     <script type="text/javascript" src="assets/scripts/jquery-ui.min.js"></script>
     <script type="text/javascript" src="assets/scripts/tooltips.min.js"></script>
     <script type="text/javascript" src="assets/scripts/custom.js"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAMRJiqvglzyac2fXo4BxoUdBgeVHamjwo&libraries=places"></script>
+    <script type="text/javascript" src="assets/scripts/infobox.min.js"></script>
+    <script type="text/javascript" src="assets/scripts/markerclusterer.js"></script>
+    <script type="text/javascript" src="assets/scripts/maps.js"></script>
 </body>
 
 </html>
