Add restaurant directions and fixing some script issues.

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,8 @@
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAMRJiqvglzyac2fXo4BxoUdBgeVHamjwo&libraries=places"></script>
     <script type="text/javascript" src="assets/scripts/infobox.min.js"></script>
     <script type="text/javascript" src="assets/scripts/markerclusterer.js"></script>
-    <script type="text/javascript" src="assets/scripts/maps.js"></script>
+    <script type="text/javascript" src="assets/scripts/single-listing-map.js"></script>
+    <script type="text/javascript" src="assets/scripts/directions-map.js"></script>
 </body>
 
 </html>
