User profile - add restaurant.

--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,7 @@
     <script type="text/javascript" src="assets/scripts/markerclusterer.js"></script>
     <script type="text/javascript" src="assets/scripts/single-listing-map.js"></script>
     <script type="text/javascript" src="assets/scripts/directions-map.js"></script>
-
-
+    <script type="text/javascript" src="assets/scripts/add-map.js"></script>
 </body>
 
 </html>
