--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/colors/main.css" id="colors">
+    <link rel="stylesheet" href="assets/map-icons/css/map-icons.min.css" id="colors">
+    
 </head>
 
 <body>
